--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
-<project name="Hello_World" basedir="." default="main">
+<project name="HelloWorld" basedir="." default="main">
 
-    <property name="src.dir"     value="src"/>
+    <property name="src.dir"     value="."/>
 
     <property name="build.dir"   value="build"/>
     <property name="classes.dir" value="${build.dir}/classes"/>
