--- a/build.xml
+++ b/build.xml
@@ -3,34 +3,36 @@
     <property name="src.dir"     value="."/>
 
     <property name="build.dir"   value="build"/>
-    <property name="classes.dir" value="${build.dir}/classes"/>
-    <property name="jar.dir"     value="${build.dir}/jar"/>
+        <property name="classes.dir" value="${build.dir}/classes"/>
+            <property name="jar.dir"     value="${build.dir}/jar"/>
 
-    <property name="main-class"  value="oata.HelloWorld"/>
+    <property name="main-class"  value="HelloWorld"/>
 
 
+    <target name="all" depends="clean,compile,jar"
+            description="Builds all targets after clean up"/>
 
     <target name="clean">
-        <delete dir="${build.dir}"/>
-    </target>
+            <delete dir="${build.dir}"/>
+                </target>
 
     <target name="compile">
-        <mkdir dir="${classes.dir}"/>
-        <javac srcdir="${src.dir}" destdir="${classes.dir}"/>
-    </target>
+            <mkdir dir="${classes.dir}"/>
+                    <javac srcdir="${src.dir}" destdir="${classes.dir}"/>
+                        </target>
 
     <target name="jar" depends="compile">
-        <mkdir dir="${jar.dir}"/>
-        <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
-            <manifest>
-                <attribute name="Main-Class" value="${main-class}"/>
-            </manifest>
-        </jar>
-    </target>
+            <mkdir dir="${jar.dir}"/>
+                    <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
+                                <manifest>
+                                                <attribute name="Main-Class" value="${main-class}"/>
+                                                            </manifest>
+                                                                    </jar>
+                                                                        </target>
 
     <target name="run" depends="jar">
-        <java jar="${jar.dir}/${ant.project.name}.jar" fork="true"/>
-    </target>
+            <java jar="${jar.dir}/${ant.project.name}.jar" fork="true"/>
+                </target>
 
     <target name="clean-build" depends="clean,jar"/>
 
